syntax = "proto3";
package auth;

import "default-response.proto";
option go_package = "github.com/anton-uvarenko/cinema/authorization-service/protobufs/auth";

message EmailPayload {
  string email = 1;
}

message CodePayload {
  int32 code = 1;
  string email = 2;
}

message PasswordPayload {
  int32 id = 1;
  string password = 2;
}

service PassVerify {
  rpc SendRecoveryCode(EmailPayload) returns (Empty);
  rpc VerifyRecoveryCode(CodePayload) returns (JwtResponse);
  rpc UpdatePassword(PasswordPayload) returns (Empty);
}