syntax = "proto3";
package auth;

import "default-response.proto";
option go_package = "github.com/anton-uvarenko/cinema/authorization-service/protobufs/auth";

message VerificationPayload {
  int32 Id = 1;
  int32 Code = 2;
}

message IdPayload {
  int32 Id = 1;
}

service Verification {
    rpc SendCode(IdPayload) returns (Empty);
    rpc VerifyCode(VerificationPayload) returns (Empty);
}